--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,7 +3,7 @@
 
 title: Radiotherapy AI
 author: Radiotherapy AI Pty Ltd
-copyright: "2021 – 2022"
+copyright: "2021 - 2022"
 
 # Force re-execution of notebooks on each build.
 # See https://jupyterbook.org/content/execute.html
@@ -51,7 +51,6 @@ html:
 # sphinx:
 #   extra_extensions:
 #     - sphinxcontrib.excel
-
 
 parse:
   myst_substitutions:
