--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -1,27 +1,26 @@
 root: index
 entries:
-- file: clinical_evaluation/clinical-evaluation-plan
+- file: general/index
   entries:
-  - file: clinical_evaluation/clinical-evaluation-report
-  - file: clinical_evaluation/sop-clinical-evaluation
-- file: data_protection/data-protection-statement-website
-  entries:
-  - file: data_protection/employee-data-protection-and-confidentiality-agreement
-  - file: data_protection/list-of-data-processing-activities
-  - file: data_protection/technical-and-organizational-measures
-- file: general/checklist-mdr
-  entries:
+  - file: general/checklist-mdr
   - file: general/declaration-of-conformity-mdd-class-i
   - file: general/essential-requirements-mdd
   - file: general/instructions-for-use
-  - file: general/intended-use
   - file: general/mdd-classification-document
   - file: general/mdr-classification-document
-- file: performance_evaluation/performance-evaluation-plan-ivdd
+  - file: general/clinical-evaluation/clinical-evaluation-plan
+    entries:
+    - file: general/clinical-evaluation/clinical-evaluation-report
+    - file: general/clinical-evaluation/sop-clinical-evaluation
+  - file: general/data-protection/data-protection-statement-website
+    entries:
+    - file: general/data-protection/employee-data-protection-and-confidentiality-agreement
+    - file: general/data-protection/list-of-data-processing-activities
+    - file: general/data-protection/technical-and-organizational-measures
+  - file: general/intended-use/index
+- file: qms/index
   entries:
-  - file: performance_evaluation/performance-evaluation-report-ivdd
-- file: qms/13485-mapping
-  entries:
+  - file: qms/13485-mapping
   - file: qms/quality-manual-policy-objectives
   - file: qms/sop-feedback-management
   - file: qms/sop-internal-audit
@@ -59,16 +58,19 @@ entries:
     entries:
     - file: qms/vigilance/incident-assessment-form
     - file: qms/vigilance/sop-vigilance
-- file: techdoc/document-roadmap
+- file: techdoc/index
   entries:
+  - file: techdoc/document-roadmap
   - file: techdoc/list-of-known-anomalies
-  - file: techdoc/14971/risk-acceptance-matrix
+  - file: techdoc/14971/index
     entries:
+    - file: techdoc/14971/risk-acceptance-matrix
     - file: techdoc/14971/risk-management-plan
     - file: techdoc/14971/risk-management-report
     - file: techdoc/14971/risk-table-fmea/index
-  - file: techdoc/62304/62304-mapping
+  - file: techdoc/62304/index
     entries:
+    - file: techdoc/62304/62304-mapping
     - file: techdoc/62304/algorithm-validation-report
     - file: techdoc/62304/bug-fixes-documentation-list
     - file: techdoc/62304/change-evaluation-list
@@ -87,8 +89,9 @@ entries:
     - file: techdoc/62304/sop-software-problem-resolution
     - file: techdoc/62304/soup-list
     - file: techdoc/62304/user-needs-list
-  - file: techdoc/62366/62366-mapping
+  - file: techdoc/62366/index
     entries:
+    - file: techdoc/62366/62366-mapping
     - file: techdoc/62366/list-of-hazard-related-use-scenarios
     - file: techdoc/62366/usability-evaluation-plan
     - file: techdoc/62366/usability-evaluation-protocol
