--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -1,98 +1,98 @@
 root: index
 entries:
-- file: general/index
+- file: 0-intended-use/index
+- file: 1-qms/index
   entries:
-  - file: general/checklist-mdr
-  - file: general/declaration-of-conformity-mdd-class-i
-  - file: general/essential-requirements-mdd
-  - file: general/instructions-for-use
-  - file: general/mdd-classification-document
-  - file: general/mdr-classification-document
-  - file: general/clinical-evaluation/clinical-evaluation-plan
+  - file: 1-qms/0-quality-manual-policy-objectives
+  - file: 1-qms/13485-mapping
+  - file: 1-qms/sop-feedback-management
+  - file: 1-qms/sop-internal-audit
+  - file: 1-qms/sop-product-certification-and-registration
+  - file: 1-qms/sop-update-of-regulations
+  - file: 1-qms/capa/0-sop-capa
     entries:
-    - file: general/clinical-evaluation/clinical-evaluation-report
-    - file: general/clinical-evaluation/sop-clinical-evaluation
-  - file: general/data-protection/data-protection-statement-website
+    - file: 1-qms/capa/list-capa
+  - file: 1-qms/document-and-record-control/0-sop-document-record-control
     entries:
-    - file: general/data-protection/employee-data-protection-and-confidentiality-agreement
-    - file: general/data-protection/list-of-data-processing-activities
-    - file: general/data-protection/technical-and-organizational-measures
-  - file: general/intended-use/index
-- file: qms/index
+    - file: 1-qms/document-and-record-control/document-list-dlqms
+  - file: 1-qms/human-resources/0-sop-human-resources-administration
+    entries:
+    - file: 1-qms/human-resources/list-of-medical-device-consultants
+    - file: 1-qms/human-resources/list-of-training-documentation
+    - file: 1-qms/human-resources/training-record
+  - file: 1-qms/management-review/0-sop-management-review
+    entries:
+    - file: 1-qms/management-review/management-review-report
+  - file: 1-qms/post-market-surveillance/0-sop-post-market-surveillance
+    entries:
+    - file: 1-qms/post-market-surveillance/periodic-safety-update-report
+    - file: 1-qms/post-market-surveillance/post-market-clinical-follow-up-plan
+    - file: 1-qms/post-market-surveillance/post-market-clinical-follow-up-report
+    - file: 1-qms/post-market-surveillance/post-market-surveillance-plan
+  - file: 1-qms/purchasing/0-sop-purchasing
+    entries:
+    - file: 1-qms/purchasing/list-of-qualified-suppliers
+    - file: 1-qms/purchasing/supplier-checklist
+  - file: 1-qms/software-validation/0-sop-software-validation
+    entries:
+    - file: 1-qms/software-validation/software-list
+    - file: 1-qms/software-validation/software-validation-form
+  - file: 1-qms/vigilance/0-sop-vigilance
+    entries:
+    - file: 1-qms/vigilance/tmpl-field-safety-notice
+    - file: 1-qms/vigilance/tmpl-incident-assessment-form
+- file: 2-techdoc/index
   entries:
-  - file: qms/13485-mapping
-  - file: qms/quality-manual-policy-objectives
-  - file: qms/sop-feedback-management
-  - file: qms/sop-internal-audit
-  - file: qms/sop-product-certification-and-registration
-  - file: qms/sop-update-of-regulations
-  - file: qms/capa/list-capa
+  - file: 2-techdoc/document-roadmap
+  - file: 2-techdoc/list-of-known-anomalies
+  - file: 2-techdoc/14971/index
     entries:
-    - file: qms/capa/sop-capa
-  - file: qms/document-and-record-control/document-list-dlqms
+    - file: 2-techdoc/14971/risk-acceptance-matrix
+    - file: 2-techdoc/14971/risk-management-plan
+    - file: 2-techdoc/14971/risk-management-report
+    - file: 2-techdoc/14971/risk-table-fmea/index
+  - file: 2-techdoc/62304/index
     entries:
-    - file: qms/document-and-record-control/sop-document-record-control
-  - file: qms/human-resources/list-of-medical-device-consultants
+    - file: 2-techdoc/62304/62304-mapping
+    - file: 2-techdoc/62304/algorithm-validation-report
+    - file: 2-techdoc/62304/bug-fixes-documentation-list
+    - file: 2-techdoc/62304/change-evaluation-list
+    - file: 2-techdoc/62304/checklist-software-release
+    - file: 2-techdoc/62304/checklist-software-requirements-review
+    - file: 2-techdoc/62304/checklist-user-needs-review
+    - file: 2-techdoc/62304/list-of-medical-devices
+    - file: 2-techdoc/62304/software-architecture-checklist
+    - file: 2-techdoc/62304/software-architecture-description
+    - file: 2-techdoc/62304/software-development-maintenance-plan
+    - file: 2-techdoc/62304/software-requirements-list
+    - file: 2-techdoc/62304/software-system-test-plan
+    - file: 2-techdoc/62304/sop-change-management
+    - file: 2-techdoc/62304/sop-deployment
+    - file: 2-techdoc/62304/sop-integrated-software-development
+    - file: 2-techdoc/62304/sop-software-problem-resolution
+    - file: 2-techdoc/62304/soup-list
+    - file: 2-techdoc/62304/user-needs-list
+  - file: 2-techdoc/62366/index
     entries:
-    - file: qms/human-resources/list-of-training-documentation
-    - file: qms/human-resources/sop-human-resources-administration
-    - file: qms/human-resources/training-record
-  - file: qms/management-review/management-review-report
-    entries:
-    - file: qms/management-review/sop-management-review
-  - file: qms/post-market-surveillance/periodic-safety-update-report
-    entries:
-    - file: qms/post-market-surveillance/post-market-clinical-follow-up-plan
-    - file: qms/post-market-surveillance/post-market-clinical-follow-up-report
-    - file: qms/post-market-surveillance/post-market-surveillance-plan
-    - file: qms/post-market-surveillance/sop-post-market-surveillance
-  - file: qms/purchasing/list-of-qualified-suppliers
-    entries:
-    - file: qms/purchasing/sop-purchasing
-    - file: qms/purchasing/supplier-checklist
-  - file: qms/software-validation/software-list
-    entries:
-    - file: qms/software-validation/software-validation-form
-    - file: qms/software-validation/sop-software-validation
-  - file: qms/vigilance/field-safety-notice
-    entries:
-    - file: qms/vigilance/incident-assessment-form
-    - file: qms/vigilance/sop-vigilance
-- file: techdoc/index
+    - file: 2-techdoc/62366/62366-mapping
+    - file: 2-techdoc/62366/list-of-hazard-related-use-scenarios
+    - file: 2-techdoc/62366/usability-evaluation-plan
+    - file: 2-techdoc/62366/usability-evaluation-protocol
+    - file: 2-techdoc/62366/usability-evaluation-report
+- file: 3-general/index
   entries:
-  - file: techdoc/document-roadmap
-  - file: techdoc/list-of-known-anomalies
-  - file: techdoc/14971/index
-    entries:
-    - file: techdoc/14971/risk-acceptance-matrix
-    - file: techdoc/14971/risk-management-plan
-    - file: techdoc/14971/risk-management-report
-    - file: techdoc/14971/risk-table-fmea/index
-  - file: techdoc/62304/index
-    entries:
-    - file: techdoc/62304/62304-mapping
-    - file: techdoc/62304/algorithm-validation-report
-    - file: techdoc/62304/bug-fixes-documentation-list
-    - file: techdoc/62304/change-evaluation-list
-    - file: techdoc/62304/checklist-software-release
-    - file: techdoc/62304/checklist-software-requirements-review
-    - file: techdoc/62304/checklist-user-needs-review
-    - file: techdoc/62304/list-of-medical-devices
-    - file: techdoc/62304/software-architecture-checklist
-    - file: techdoc/62304/software-architecture-description
-    - file: techdoc/62304/software-development-maintenance-plan
-    - file: techdoc/62304/software-requirements-list
-    - file: techdoc/62304/software-system-test-plan
-    - file: techdoc/62304/sop-change-management
-    - file: techdoc/62304/sop-deployment
-    - file: techdoc/62304/sop-integrated-software-development
-    - file: techdoc/62304/sop-software-problem-resolution
-    - file: techdoc/62304/soup-list
-    - file: techdoc/62304/user-needs-list
-  - file: techdoc/62366/index
-    entries:
-    - file: techdoc/62366/62366-mapping
-    - file: techdoc/62366/list-of-hazard-related-use-scenarios
-    - file: techdoc/62366/usability-evaluation-plan
-    - file: techdoc/62366/usability-evaluation-protocol
-    - file: techdoc/62366/usability-evaluation-report
+  - file: 3-general/checklist-mdr
+  - file: 3-general/declaration-of-conformity-mdd-class-i
+  - file: 3-general/essential-requirements-mdd
+  - file: 3-general/instructions-for-use
+  - file: 3-general/mdd-classification-document
+  - file: 3-general/mdr-classification-document
+- file: clinical-evaluation/0-sop-clinical-evaluation
+  entries:
+  - file: clinical-evaluation/clinical-evaluation-plan
+  - file: clinical-evaluation/clinical-evaluation-report
+- file: data-protection/data-protection-statement-website
+  entries:
+  - file: data-protection/employee-data-protection-and-confidentiality-agreement
+  - file: data-protection/list-of-data-processing-activities
+  - file: data-protection/technical-and-organizational-measures
