--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -91,8 +91,9 @@ entries:
   entries:
   - file: clinical-evaluation/clinical-evaluation-plan
   - file: clinical-evaluation/clinical-evaluation-report
-- file: data-protection/data-protection-statement-website
+- file: data-protection/index
   entries:
+  - file: data-protection/data-protection-statement-website
   - file: data-protection/employee-data-protection-and-confidentiality-agreement
   - file: data-protection/list-of-data-processing-activities
   - file: data-protection/technical-and-organizational-measures
