--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,6 @@ jobs:
       fail-fast: false
       matrix:
         task: ["pytest", "docs", "pyright"]
-        python-version: ["3.10.6"]
 
     steps:
       - uses: actions/checkout@v2
@@ -23,7 +22,7 @@ jobs:
       - name: Setup Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
-          python-version: ["3.10.6"]
+          python-version: "3.10.6"
 
       - name: Get full Python version
         id: full-python-version
