--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,3 +24,7 @@ repos:
     rev: 22.3.0
     hooks:
       - id: black
+  - repo: https://github.com/keewis/blackdoc
+    rev: v0.3.7
+    hooks:
+      - id: blackdoc
