--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -103,7 +103,9 @@ jobs:
       - name: Build docs
         if: matrix.task == 'docs'
         run: |
+          [[ -d docs/_build/html ]]
           poetry run rtai docs
+          [[ ! -d docs/_build/html ]]  # Wrong way round to start
 
       - name: Add GitHub Pages config files
         if: github.event_name == 'push' && matrix.task == 'docs'
