--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -21,7 +21,7 @@ bibtex_bibfiles:
 
 # Information about where the book exists on the web
 repository:
-  url: https://github.com/RadiotherapyAI/RadiotherapyAI
+  url: https://github.com/RadiotherapyAI/rai
   path_to_book: docs
   branch: main
 
