pull in point based batches and inference merging

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ scikit-image = "*"
 scipy = "*"
 pydicom = "*"
 click = "*"
+numba = "*"
 
 tensorflow = { version = "*", markers = "platform_system != \"Windows\"" }
 tensorflow-intel = { version = "*", markers = "platform_system == \"Windows\"" }
