--- a/.pylintrc
+++ b/.pylintrc
@@ -6,10 +6,11 @@ ignore =
 disable =
     fixme,
     line-too-long,
+    logging-fstring-interpolation,
 
 [FORMAT]
 good-names =
-    i,j,k,x,y,z,a,b,dx,dy,x0,y0,p,t,ax,c,f,ds,vr,xx,yy,zz
+    i,j,k,x,y,z,a,b,dx,dy,x0,y0,p,t,ax,c,f,ds,vr,xx,yy,zz,mu
 
 [DESIGN]
 max-locals = 20
