--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,6 +84,17 @@ force_grid_wrap = 0
 use_parentheses = true
 ensure_newline_before_comments = true
 
+known_second_party = ["raicontours"]
+known_first_party = ["rai"]
+sections = [
+    "FUTURE",
+    "STDLIB",
+    "THIRDPARTY",
+    "SECOND_PARTY",
+    "FIRSTPARTY",
+    "LOCALFOLDER",
+]
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
