--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -55,6 +55,6 @@ html:
 parse:
   myst_substitutions:
     device_name: "RAIContours"
-    device_version: "`v0.1.0`"
+    device_version: "`v0.2.0-dev0`"
     device_manufacturer: "Radiotherapy AI Pty Ltd"
     python_version: "3.10.6"
