--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "rai"
-version = "0.2.0-dev0"
+version = "0.2.0-dev1"
 readme = "README.md"
 description = "AI assisted treatments accessible to all"
 authors = ["Simon Biggs <simon.biggs@radiotherapy.ai>"]
@@ -76,7 +76,7 @@ exclude = [
     "**/node_modules",
     "**/__pycache__",
 ]
-typeCheckingMode = "strict"
+# typeCheckingMode = "strict"
 
 [tool.isort]
 multi_line_output = 3
