--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,6 +14,7 @@ repos:
       - id: check-toml
       - id: check-added-large-files
         args: ["--maxkb", "500"]
+        exclude: ^.*innolitics.*attributes.json$
   - repo: https://github.com/pycqa/isort
     rev: 5.10.1
     hooks:
