--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,8 +57,8 @@ tensorflow-directml-plugin = { version = "*", markers = "platform_system == \"Wi
 
 # Pin while the model is likely to change significantly from one version to the
 # next, and also pinning while raicontours is utilising development releases.
-raicontours = "0.3.0-dev3"
-# raicontours = { path = "../raicontours", develop = true }
+# raicontours = "0.3.0-dev3"
+raicontours = { path = "../raicontours", develop = true }
 
 # Not needed after Python 3.7 support is dropped
 PyWavelets = "<1.4.0"
