set type checking back to strict

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,7 +79,7 @@ exclude = [
     "**/node_modules",
     "**/__pycache__",
 ]
-# typeCheckingMode = "strict"
+typeCheckingMode = "strict"
 
 [tool.isort]
 multi_line_output = 3
