--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,7 +61,7 @@ jobs:
           poetry config virtualenvs.in-project true
 
       - name: Poetry cache
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         id: poetry-cache
         with:
           path: .venv
@@ -72,7 +72,7 @@ jobs:
         if: steps.poetry-cache.outputs.cache-hit == 'true'
         shell: bash
         run: |
-          rm -rf .venv
+          timeout 10s poetry run pip --version || rm -rf .venv
 
       - name: Poetry install
         run: |
