--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -1,6 +1,9 @@
 root: index
 entries:
 - file: 0-intended-use/index
+  entries:
+  - file: 0-intended-use/autocontouring
+  - file: 0-intended-use/sgrt
 - file: 1-qms/index
   entries:
   - file: 1-qms/0-quality-manual-policy-objectives
@@ -85,7 +88,6 @@ entries:
   - file: 3-general/declaration-of-conformity-mdd-class-i
   - file: 3-general/essential-requirements-mdd
   - file: 3-general/instructions-for-use
-  - file: 3-general/mdd-classification-document
   - file: 3-general/mdr-classification-document
 - file: clinical-evaluation/0-sop-clinical-evaluation
   entries:
@@ -97,3 +99,4 @@ entries:
   - file: data-protection/employee-data-protection-and-confidentiality-agreement
   - file: data-protection/list-of-data-processing-activities
   - file: data-protection/technical-and-organizational-measures
+
