--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "py/raicontours"]
-	path = py/raicontours
+	path = src/python/raicontours
 	url = git@github.com:RadiotherapyAI/raicontours.git
