update BUILD to include pypi packaging

--- a/src/python/rai/BUILD
+++ b/src/python/rai/BUILD
@@ -1,18 +1,23 @@
 python_sources(
+    name="lib"
     dependencies=[":resources"],
     overrides={
-        "__main__.py": {"dependencies": ["src/python/pants/bin:pants_loader"]},
         "version.py": {"dependencies": ["src/python/pants/_version:resources"]},
     },
 )
 
 python_distribution(
     name="rai-packaged",
-    dependencies=[":lib"],
-    wheel=True,
+    dependencies=[
+        ":lib",
+        ":resources",
+    ],
     sdist=True,
+    wheel=True,
     provides=setup_py(
         name="rai",
         description="",
     ),
 )
+
+resources(name="resources", sources=["py.typed"])
