--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 ; Generated with (TODO: script this):
 ; https://www.pantsbuild.org/docs/setting-up-an-ide#first-party-sources
 
-PYTHONPATH="./src/python/rai:./src/python/raicontours:$PYTHONPATH"
+PYTHONPATH="./src/python:$PYTHONPATH"
