--- a/pants.toml
+++ b/pants.toml
@@ -27,7 +27,7 @@ repo_id = "ad4dd1f1-8c32-4d36-9bb3-71a966bbc771"
 
 [source]
 root_patterns = [
-    "/src/python/*",
+    "/src/python",
 ]
 
 [python]
