--- a/src/python/raicontours/BUILD
+++ b/src/python/raicontours/BUILD
@@ -10,7 +10,10 @@ python_distribution(
     provides=python_artifact(
         name="raicontours",
     ),
-    generate_setup = False,
+    generate_setup=False,
 )
 
-resources(name="resources", sources=["LICENSE", "LICENSE.ADDITIONAL-TERMS", "README.md", "pyproject.toml"])
+resources(
+    name="resources",
+    sources=["LICENSE", "LICENSE.ADDITIONAL-TERMS", "README.md", "pyproject.toml"],
+)
