--- a/src/python/rai/BUILD
+++ b/src/python/rai/BUILD
@@ -17,5 +17,11 @@ python_distribution(
 
 resources(
     name="resources",
-    sources=["LICENSE", "LICENSE.ADDITIONAL-TERMS", "README.md", "pyproject.toml", "rai/py.typed"],
+    sources=[
+        "LICENSE",
+        "LICENSE.ADDITIONAL-TERMS",
+        "README.md",
+        "pyproject.toml",
+        "rai/py.typed",
+    ],
 )
