--- a/pants.toml
+++ b/pants.toml
@@ -2,6 +2,8 @@
 pants_version = "2.14.0"
 
 pythonpath = ["%(buildroot)s/pants-plugins"]
+print_stacktrace = true
+
 backend_packages = [
   "pants.backend.python",
   "pants.backend.experimental.python",
@@ -31,7 +33,7 @@ repo_id = "ad4dd1f1-8c32-4d36-9bb3-71a966bbc771"
 [source]
 root_patterns = [
     "/src/python/*",
-    "pants-plugins",
+    "/"
 ]
 
 [python]
