--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,13 +51,13 @@ jobs:
           [[ -d docs/_build/html ]]
 
       - name: Add GitHub Pages config files
-        if: github.event_name == 'push' && matrix.task == 'docs'
+        if: github.event_name == 'push'
         run: |
           echo docs.radiotherapy.ai > docs/_build/html/CNAME
           touch docs/_build/html/.nojekyll
 
       - name: Deploy to gh-pages branch
-        if: github.event_name == 'push' && matrix.task == 'docs'
+        if: github.event_name == 'push'
         uses: JamesIves/github-pages-deploy-action@4.1.3
         with:
           branch: gh-pages
