--- a/pants.toml
+++ b/pants.toml
@@ -1,7 +1,11 @@
 [GLOBAL]
 pants_version = "2.14.0"
+pythonpath = ["%(buildroot)s/pants-plugins"]
+print_stacktrace = true
+
 backend_packages = [
   "pants.backend.python",
+  "pants.backend.plugin_development",
   "pants.backend.experimental.python",
   "pants.backend.python.lint.black",
   "pants.backend.python.lint.isort",
@@ -28,7 +32,8 @@ repo_id = "ad4dd1f1-8c32-4d36-9bb3-71a966bbc771"
 [source]
 root_patterns = [
     "/src/python/*",
-    "/"
+    "/",
+    "/pants-plugins"
 ]
 
 [python]
