--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.9]
+        # TODO: Re-implement pulling this version from the repo version
+        python-version: [3.9.15]
 
     steps:
       - uses: actions/checkout@v3
